Bug 14253 - smbclient should not always warn about missing directories or messaging context
Summary: smbclient should not always warn about missing directories or messaging context
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: 4.11.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-27 13:59 UTC by Andreas Schneider
Modified: 2020-02-04 09:59 UTC (History)
3 users (show)

See Also:


Attachments
patch for 4.12 and 4.11 (1.49 KB, patch)
2020-01-27 16:20 UTC, Andreas Schneider
asn: review? (gd)
ab: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2020-01-27 13:59:09 UTC
If you install Samba (client) without running smbd at least one and use only the client part, it will produce several messages when connecting to a share:


smbclient //10.0.136.215/testshare/ -Usmbuser%smbuser
directory_create_or_exist: mkdir failed on directory /var/lib/samba/lock/msg.lock: Permission denied
ctory /var/lib/samba/lock/msg.lock: Permission denied

The reason is that those are logged as warnings, but smbclient sets the log level to 1 by default!
Comment 1 Andreas Schneider 2020-01-27 16:20:30 UTC
Created attachment 15755 [details]
patch for 4.12 and 4.11
Comment 2 Alexander Bokovoy 2020-01-29 10:52:28 UTC
Comment on attachment 15755 [details]
patch for 4.12 and 4.11

LGTM
Comment 3 Andreas Schneider 2020-01-29 12:05:14 UTC
Karolin, please apply the patch to the relevant branches. Thanks!
Comment 4 Karolin Seeger 2020-01-31 10:46:49 UTC
Pushed to autobuild-v4-{12,11}-test.
Comment 5 Karolin Seeger 2020-02-03 08:45:19 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to both branches.
Closing out bug report.

Thanks!
Comment 6 Andreas Schneider 2020-02-03 09:47:38 UTC
Karolin, could you also apply it to 4.10 please? Thanks!
Comment 7 Karolin Seeger 2020-02-03 09:51:47 UTC
(In reply to Andreas Schneider from comment #6)
Pushed to autobuild-v4-10-test.
Comment 8 Karolin Seeger 2020-02-04 09:59:05 UTC
(In reply to Karolin Seeger from comment #7)
Pushed to v4-10-test.
Closing out bug report.

Thanks!